app/assets/stylesheets/application.scss
@import 'masonry/basic';
@import 'masonry/transitions';

@import 'joyride/joyride-2.1';
@import 'bootstrap-sprockets';
@import 'bootstrap-custom';

@import 'font-gotham';
@import 'jqcloud';

@import 'material-colors';
@import 'mobile-first';
@import 'navbar';
@import 'autocomplete';
@import 'chat';
@import 'feed';
@import 'user-style';
@import 'select2';
@import 'select2-bootstrap';


.container {
  padding-top: 20px;
}

.alert .timestamp {
  color: $timestamp-color;
  font-size: 70%;
  font-weight: normal;
  float: right;
}

// Jumbotron material desing 

.jumbotron {
  background-position: center;
  // Make the background image cover the area of the <div>, and clip the excess 
  background-size: cover;
  border-radius: 0 !important;
  height: 320px;
  margin-bottom: 0;
}

// Frontpage setup

.head {
  background-image: image-url('bg.jpg');
  background-position: center;
  height: 100vh;

  .middle {
    padding-top: 150px;

    h1, p, a {
      text-shadow:  1px 1px 11px rgba(0, 0, 0, .81);
    }
  }
}

// other

.alert {
  margin-bottom: 0;
}

.modal-footer {
  border-top: 0 solid #fff;
}

.modal-header {
  border-bottom: 0 solid #fff;
}
.autoModal.modal {

    max-width: 100%;
}
.modal-dialog.autoModal{
  width: 80%;
  height: 80%;

}
.modal-image{
  height: 60vh;
  background-repeat: no-repeat;
  background-size: contain;
  padding-bottom: 10px;
}

